[project]
name = "ros-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lark>=1.3.0",
]

[tool.mypy]
strict = true
python_version = "3.10"
exclude = [
    "^.*/_standalone.*\\.py$",
    "^.*/_lark_standalone.*\\.py$",
]

[tool.ruff]
extend = "../pyproject.toml"
extend-exclude = [
    '**/_standalone*.py',
    '**/_lark_standalone*.py',
    'tests/reference_parser.py',
    '_generate_standalone.py',
]
