[project]
name = "small-mcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
zstd = ["zstandard>=0.23.0"]
lz4 = ["lz4>=4.3.3"]
compression = ["small-mcap[zstd]", "small-mcap[lz4]"]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"
