[project]
name = "small-mcap"
version = "0.1.0"
description = "Lightweight Python library for reading and writing MCAP files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["mcap", "robotics", "ros", "ros2", "serialization", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[project.optional-dependencies]
zstd = ["zstandard>=0.23.0"]
lz4 = ["lz4>=4.3.3"]
compression = ["small-mcap[zstd]", "small-mcap[lz4]"]
dev = [
    "mcap>=1.0.0",
    "rosbags>=0.11.0",
    "pybag-sdk>=0.6.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[[tool.mypy.overrides]]
module = "lz4.frame"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
