[project]
name = "websocket-proxy"
version = "0.1.2"
description = "Foxglove WebSocket proxy with message transformations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Marko Bausch"}
]
keywords = ["websocket", "foxglove", "robotics", "ros", "ros2", "proxy", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "pymcap-cli[video,pointcloud]",
    "websockets>=15.0.1",
    "typing-extensions>=4.12.2",
    "mcap-ros2-support-fast",
    "robo-ws-bridge",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/mrkbac/robotic-tools"
Repository = "https://github.com/mrkbac/robotic-tools"
Issues = "https://github.com/mrkbac/robotic-tools/issues"

[project.scripts]
bridge = "websocket_proxy.__main__:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mcap-ros2-support-fast = { workspace = true }
pymcap-cli = { workspace = true }
robo-ws-bridge = { workspace = true }

[dependency-groups]
example = [
    "foxglove-sdk>=0.15.3",
]
